--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div class="box-menu">
               <ul class="ul">
                 <li><a id="home" href="/">HOME</a></li>
-                <li><a id="sports" href="/sports.html">Sports</a></li>
-                <li><a id="healty" href="/healty.html">Healty</a></li>
+                <li><a id="sports" href="/ProjectNews-DEPI-/sports.html">Sports</a></li>
+                <li><a id="healty" href="/ProjectNews-DEPI-/healty.html">Healty</a></li>
               </ul>
               <div class="open-close">
                 <button class="menu"><i class="fa-solid fa-bars"></i></button>
