--- a/sports.html
+++ b/sports.html
@@ -23,9 +23,9 @@
             <img src="Picture/logo.png" alt="" />
             <div class="box-menu">
               <ul class="ul">
-                <li><a id="home" href="/index.html">HOME</a></li>
+                <li><a id="home" href="/ProjectNews-DEPI-/index.html">HOME</a></li>
                 <li><a id="sports" href="/">Sports</a></li>
-                <li><a id="healty" href="/healty.html">Healty</a></li>
+                <li><a id="healty" href="/ProjectNews-DEPI-/healty.html">Healty</a></li>
               </ul>
               <div class="open-close">
                 <button class="menu"><i class="fa-solid fa-bars"></i></button>
