--- a/healty.html
+++ b/healty.html
@@ -23,8 +23,8 @@
             <img src="Picture/logo.png" alt="" />
             <div class="box-menu">
               <ul class="ul">
-                <li><a id="home" href="/index.html">HOME</a></li>
-                <li><a id="sports" href="/healty.html">Sports</a></li>
+                <li><a id="home" href="/ProjectNews-DEPI-/index.html">HOME</a></li>
+                <li><a id="sports" href="/ProjectNews-DEPI-/healty.html">Sports</a></li>
                 <li><a id="healty" href="/">Healty</a></li>
               </ul>
               <div class="open-close">
